add comment feature

--- a/client/src/app/components/blog/blog.component.css
+++ b/client/src/app/components/blog/blog.component.css
@@ -165,3 +165,14 @@ button.close{
 .dropdown:hover .dropdown-content {
     display: block;
 }
+
+button[disabled] {
+	cursor: default;
+}
+
+.list-group-item {
+	padding: 4px 10px;
+	background-color: #fefefe;
+	color: #525252;
+	border: none;
+}
