remove large size font

--- a/client/src/app/components/home/home.component.html
+++ b/client/src/app/components/home/home.component.html
@@ -8,9 +8,10 @@
   </div>
 </div>
 
-<p><span class="ch-font-tc-r">Noto Sans TC Regular: 從 Google Noto Fonts 字型家族網站可以找到「Noto Serif CJK TC」，也就是繁體中文，點擊右上角的「Download」即可下載、取得七種不同字重的思源宋體字型檔，大小約在 124 MB 左右。</span><br><br>
+<p>
+    <!-- <span class="ch-font-tc-r">Noto Sans TC Regular: 從 Google Noto Fonts    字型家族網站可以找到「Noto Serif CJK TC」，也就是繁體中文，點擊右上角的「Download」即可下載、   取得七種不同字重的思源宋體字型檔，大小約在 124 MB 左右。</span><br><br> -->
 
-		<span class="ch-font-cjk">Noto CJK: 從 Google Noto Fonts 字型家族網站可以找到「Noto Serif CJK TC」，也就是繁體中文，點擊右上角的「Download」即可下載、取得七種不同字重的思源宋體字型檔，大小約在 124 MB 左右。</span><br><br>
+		<!-- <span class="ch-font-cjk">Noto CJK: 從 Google Noto Fonts 字型家族網站可以找到「Noto Serif CJK TC」，也就是繁體中文，點擊右上角的「Download」即可下載、取得七種不同字重的思源宋體字型檔，大小約在 124 MB 左右。</span><br><br> -->
 
 		<span class="ch-font-sans">Noto Sans: 從 Google Noto Fonts 字型家族網站可以找到「Noto Serif CJK TC」，也就是繁體中文，點擊右上角的「Download」即可下載、取得七種不同字重的思源宋體字型檔，大小約在 124 MB 左右。</span><br><br>
 
